Bug 120573 - FILESAVE PPTX: Slides with Custom Audio Corrupted on Roundtrip
Summary: FILESAVE PPTX: Slides with Custom Audio Corrupted on Roundtrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Corrupted
  Show dependency treegraph
 
Reported: 2018-10-13 20:05 UTC by Luke
Modified: 2018-10-28 18:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample PPTX with Inserted Media, Custom Sound (238.14 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2018-10-13 20:05 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2018-10-13 20:05:15 UTC
Created attachment 145688 [details]
Sample PPTX with Inserted Media, Custom Sound

Impress creates a corrupted .pptx when it contains custom audio.

Steps to reproduce:
1. In Powerpoint, Insert -> Media -> audio
2. Save
3. Open in Impress
4. Save
5. Open in Powerpoint
Comment 1 Mark Hung 2018-10-17 11:04:27 UTC
Confirmed with

版本:6.1.2.1 (x64)
組建 ID:65905a128db06ba48db947242809d14d3f9a93fe
CPU 執行緒:8; OS:Windows 10.0; UI 算繪:預設; 
語言地區:zh-TW (zh_TW); Calc: group threaded

and

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 48d22544be09bf63ded8eb48d1f8252b456f7fd5
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: zh-TW (zh_TW); Calc: threaded
Comment 2 Xisco Faulí 2018-10-18 09:21:43 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.10; Render: default; 

and

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 Commit Notification 2018-10-18 12:48:41 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a1b9f7e81aa1a105bbac08d310825f367dbfe601

tdf#120573 export media type for .wav properly.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Luke 2018-10-28 18:17:43 UTC
Inserted audio is now saved and no longer results in corrupted pptx. Verified FIXED with Version: 6.2.0.0.alpha1+ (x64)
Build ID: c9ec7105ba173af77fb9eadcdd3f694494664865
and PowerPoint 2016

Thanks Mark!