tdf#120573 export media type for .wav properly.

Only video files were handled before. .wav files had
wrong mime type in [Content Types].xml, used videoFile
tag in slide1.xml, and incorrect type in rel file.

Change-Id: I92bded52eb9f366103a10334c6a92fda9648076e