include/oox/token/relationship.hxx
@@ -58,6 +58,7 @@ enum class Relationship
     THEME,
     VBAPROJECT,
     VIDEO,
+    AUDIO,
     VMLDRAWING,
     WORDVBADATA,
     WORKSHEET
